SideBar Overflow Bug Fix
Set the sidebar to automatically handle overflow, and set the height to
always be the same as the user's window. Any extra items should now be
hidden from view but accessible via a scroll bar.

--- a/frontend/src/Components/SideBar/SideBar.css
+++ b/frontend/src/Components/SideBar/SideBar.css
@@ -2,6 +2,8 @@
    background-color: var(--gray-accent-color);
    padding-top: 20px;
    overflow-x: hidden;
+   overflow-y: auto;
+   height: 100vh;
    transition: 0.5s;
 }
 
